--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-paginate": "^8.2.0",
     "slugify": "^1.6.6",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
