migrate db to vercel

--- a/.env
+++ b/.env
@@ -12,3 +12,13 @@ PGPORT=5432
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://root:root@localhost:5432/coffee_passport?schema=public"
+
+
+POSTGRES_URL="postgres://default:fxeuDT2R3jLq@ep-square-rain-a4ckrhqh-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:fxeuDT2R3jLq@ep-square-rain-a4ckrhqh-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:fxeuDT2R3jLq@ep-square-rain-a4ckrhqh-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:fxeuDT2R3jLq@ep-square-rain-a4ckrhqh.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-square-rain-a4ckrhqh-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="fxeuDT2R3jLq"
+POSTGRES_DATABASE="verceldb"
