--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint",
     "migrate:create": "prisma migrate dev --create-only",
     "migrate": "prisma migrate dev",
-    "migrate:dev": "prisma migrate deploy"
+    "migrate:dev": "prisma migrate deploy",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^5.14.0",
-    "@prisma/client": "^5.15.0",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -47,7 +48,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
-    "prisma": "^5.14.0",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.4.3",
     "tailwindcss-debug-screens": "^2.2.1",
     "ts-node": "^10.9.2",
